--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,38 +1,6 @@
-@font-face {
-	font-family: 'proxima-regular';
-	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
-	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'proxima-bold';
-	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot');
-	src: url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.woff') format('woff'),
-		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.ttf') format('truetype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-bold-webfont.svg#proxima_nova_rgbold') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'gibeon';
-	src: url('../assets/fonts/gibeon-extralightse-webfont.woff') format('woff')
-}
-
-:root {
-    --blue: #302D42;
-    --sand: #FFFAEE;
-    --red: #F6002F;
-    --beige: #BAB5AB;
-  }
+@import './Constants.css';
 
 html, body {
-    font-family: 'proxima-regular', Helvetica, Arial, sans-serif;
     position: relative;
     overflow-x:hidden;
 }
