--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,19 +1,4 @@
-@font-face {
-	font-family: 'proxima-regular';
-	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot');
-	src: url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.eot?#iefix') format('embedded-opentype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.woff') format('woff'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.ttf') format('truetype'),
-		 url('https://litmus.com/fonts/Emails/proximanova-regular-webfont.svg#proxima_nova_rgregular') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-:root {
-    --blue: #302D42;
-    --sand: #FFFAEE;
-    --red: #F6002F;
-  }
+@import './Constants.css';
 
 html, body {
   margin: 0;
@@ -24,11 +9,6 @@ html, body {
 
 html {
   overflow-y: scroll;
-}
-
-body { 
-    background-color: var(--sand);
-    font-family: 'proxima-regular', Helvetica, Arial, sans-serif;
 }
 
 .navbar {
