--- a/src/components/pages/portfolio/main-portfolio.css
+++ b/src/components/pages/portfolio/main-portfolio.css
@@ -12,9 +12,72 @@
     width: 95%;
     border-radius: 10px;
     overflow: hidden;
-    padding-left: 1vw;
+    padding-left: 0.5vw;
     margin-top: 15px;
-    padding-right: 1vw;
+    padding-right: 0.5vw;
     justify-content: center;
     align-items: center;
+}
+
+.img-wrap-two {
+    position: relative;
+    width: 70%;
+    padding-top: 30%;
+    height: 60%;
+    overflow: hidden;
+    max-height: 50%;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+
+.full-para {
+    margin: 0;
+    margin-bottom: 20px;
+    width: 100%;
+    line-height: 24px;
+}
+
+.half-para {
+    margin: 0;
+    margin-bottom: 20px;
+    width: 50%;
+    line-height: 24px;
+    margin-right: 55px;
+}
+
+.reg-img {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.half-img {
+    width: 40%;
+}
+
+.top {
+    position:relative;
+}
+
+.half-text {
+    position: relative;
+    display: flex;
+    flex-flow: row;
+}
+
+@media only screen and (max-width: 1024px) {
+    .img-wrap-two {
+        width: 95%;
+        padding-top: 70%;
+        padding-bottom: 0;
+        vertical-align: bottom;
+    }
+
+    .half-text {
+        flex-flow: wrap;
+    }
+
+    .half-img, .half-para {
+        width: 100%;
+        margin: 0;
+    }
 }
