--- a/src/components/Constants.css
+++ b/src/components/Constants.css
@@ -50,9 +50,40 @@ hr {
     color: var(--blue);
     text-align: left;
     font-size: 48px;
-	width: 95%;
+	margin: 10px;
+	margin-left: 0;
+	width: 100%;
+}
+
+.gibeon {
+	font-family: 'gibeon', Arial, Helvetica, sans-serif;
+	font-size: 24px;
+}
+
+.proxima {
+	font-family: 'proxima-regular', Arial, Helvetica, sans-serif;
 }
 
   .no-margin {
 	margin: 0;
+  }
+
+  .bottom-margin {
+	margin-bottom: 15px;
+  }
+
+  .full {
+	width: 100%;
+  }
+
+  .half {
+	width: 30%;
+  }
+
+  .quarter {
+	width: 75%;
+  }
+
+  .blue {
+	color: var(--blue);
   }
