--- a/src/components/WorkDetails.css
+++ b/src/components/WorkDetails.css
@@ -13,9 +13,11 @@ body {
     position: relative;
     width: 90%;
     padding-top: 30%;
-    height: 60%;
     overflow: hidden;
-    max-height: 50%;;
+    max-height: 50%;
+    border-radius: 5px;
+    vertical-align: bottom;
+    margin-bottom: 20px;
   }
 
   .project-img {
@@ -28,9 +30,10 @@ body {
     display: block;
     width: 100%;
     max-width: 100%;
-    height: 90%;
-    max-height: 90%;
+    height: 100%;
+    max-height: 100%;
     object-fit: contain;
+    border-radius: 5px;
     transition: all 0.2s linear;
   }
 
@@ -90,11 +93,9 @@ body {
   }
 
   .work-info {
-    padding-left: 20px;
-    padding-right: 20px;
     display: flex;  
     flex-direction: column; 
-    width: 90%;
+    width: 100%;
     height: 100%;
     justify-content: center;
     align-items: center;
@@ -113,15 +114,25 @@ body {
     font-size: 32px;
     font-family: 'gibeon', Helvetica, Arial, sans-serif;
     color: var(--blue);
-    width: 85%;
+    width: 100%;
     margin: 0;
+  }
+
+  .subtitle {
+    font-size: 28px;
+    font-family: 'gibeon', Helvetica, Arial, sans-serif;
+    color: var(--blue);
+    width: 100%;
+    margin: 0;
+    margin-bottom: 15px;
+    margin-top: 20px;
   }
 
   .task-container {
     display: flex;
     flex-flow: wrap;
     justify-content: space-around;
-    width: 85%;
+    width: 100%;
     margin-top: 30px;
   }
 
@@ -157,25 +168,33 @@ body {
   .project-desc {
     margin: 0;
     margin-top: 10px;
+    align-items: flex-start;
   }
 
   .container-row {
     display: flex;
     flex-flow: row;
     align-items: center;
+    width: 100%;
+  }
+
+  .container-row-no-flex {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    width: 100%;
+  }
+
+  .work-wrapper {
     width: 85%;
   }
 
 @media only screen and (max-width: 1024px) {
-    .main-container {
+    .main-container, .work-wrapper {
       width: 95%;
     }
 
-    .img-wrap {
-        width: 90%;
-    }
-
-    .project-info, .project-header {
+    .project-info, .project-header, .container-row {
         flex-flow: column;
     }
     
@@ -188,12 +207,24 @@ body {
         max-width: 40%;
     }
 
-    .project-label {
+    .project-label, .img-wrap{
         width: 100%;
     }
 
     .info-label {
         font-size: 14px;
         margin-bottom: 25px; 
+    }
+
+    .img-wrap, .mobile-short {
+        padding-top: 50%;
+    }
+
+    .mobile-long {
+        padding-top: 30%;
+    }
+
+    .subtitle {
+        font-size: 24px;
     }
   }
