--- a/src/components/pages/portfolio/main-portfolio.css
+++ b/src/components/pages/portfolio/main-portfolio.css
@@ -51,7 +51,7 @@
 }
 
 .half-img {
-    width: 40%;
+    width: 30%;
 }
 
 .top {
@@ -62,6 +62,20 @@
     position: relative;
     display: flex;
     flex-flow: row;
+    justify-content: space-between;
+}
+
+.fun-facts-container {
+    position: relative;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 30px;
+}
+
+.fact-item {
+    width: 40%;
 }
 
 @media only screen and (max-width: 1024px) {
