--- a/src/components/pages/portfolio/main-portfolio.css
+++ b/src/components/pages/portfolio/main-portfolio.css
@@ -51,7 +51,7 @@
 }
 
 .half-img {
-    width: 30%;
+    width: 35%;
 }
 
 .top {
@@ -72,6 +72,7 @@
     justify-content: space-between;
     width: 100%;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .fact-item {
@@ -93,5 +94,13 @@
     .half-img, .half-para {
         width: 100%;
         margin: 0;
+    }
+
+    .half-img {
+        margin-top: 20px;
+    }
+
+    .fact-item {
+        width: 45%;
     }
 }
