--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -144,28 +144,32 @@ html {
     height: 20vh;
     width: 100%;
     transform: skewY(5.5deg);
-    z-index: -1;
+    position: relative;
+    z-index: -10;
   }
 
   .straight-bottom {
     background-color: var(--red);
-    z-index: 2;
+    z-index: -2;
     margin-top: -10vh;
     height: 20vh;
     position: relative;
     text-align: center;
     display: flex;       
-    align-items: flex-end; 
+    align-items: flex-end;
+    z-index: 0;
   }
 
   .footer-contents {
     margin: 0px auto;
     margin-bottom: 3vh;
+    z-index: 5;
   }
 
   .footer-margin {
     color: var(--sand);
     margin-left: 1vw;
+    z-index: 3;
   }
   
   header .nav-btn {
