--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -4,7 +4,7 @@ html, body {
   margin: 0;
   padding: 0;
   position:relative;
-  overflow-x:hidden 
+  overflow-x:hidden;
 }
 
 html {
@@ -16,6 +16,8 @@ html {
   justify-content: center;
   margin-top: 2vh;
   z-index: 100;
+  background-color: none;
+  font-family: 'satoshi-medium', Arial, Helvetica, sans-serif;
 }
 
 .navbar-container {
@@ -29,6 +31,28 @@ html {
   height: 2vh;
   box-shadow: rgba(48, 45, 66, 0.5) 0px 3px 8px;
   z-index: 1000;
+}
+
+.logo {
+  position: fixed;
+  display: flex;
+  width: 35px;
+  z-index: 10;
+}
+
+.logo-container {
+  position: fixed;
+  display: flex;
+  z-index: 100;
+  height: 2vh;
+  margin-top: 1vh;
+  width: 100%;
+  visibility: visible;
+  justify-content: center;
+}
+
+.logo-wrapper {
+  width: 90%;
 }
 
 .navbar-links {
@@ -190,7 +214,7 @@ html {
   }
   
   @media only screen and (max-width: 1024px) {
-    .nightmode-container{
+    .nightmode-container, .logo-container{
       visibility: hidden;
     }
 
