--- a/src/components/works/Work.css
+++ b/src/components/works/Work.css
@@ -6,6 +6,7 @@
     justify-content: center;
     padding-left: 1vw;
     padding-right: 1vw;
+    scroll-margin: 60px;
   }
 
   .cards-container {
@@ -122,12 +123,6 @@
     display: flex;
     flex-direction: row;
     flex-flow: wrap;
-  }
-  
-  @media only screen and (min-width: 1200px) {
-    .content__blog__container {
-      width: 84%;
-    }
   }
   
   @media only screen and (min-width: 1024px) {
