--- a/src/components/works/PortfolioTags.css
+++ b/src/components/works/PortfolioTags.css
@@ -13,7 +13,7 @@
     -moz-user-select: -moz-none;
     -o-user-select: none;
     user-select: none;
-    font-size: 10px;
+    font-size: 12px;
     padding: 5px 12px 5px 12px;
     margin-top: 10px;
     display: flex;
@@ -41,8 +41,12 @@
     background: #BB86FF;
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 82em){
     .tag {
-        font-family: 'satoshi-regular', Arial, Helvetica, sans-serif;
+        font-size: 10px;
     }
+
+}
+@media only screen and (max-width: 62em) {
+
 }
