--- a/src/components/works/Work.css
+++ b/src/components/works/Work.css
@@ -49,7 +49,7 @@
     width: 100%;
     padding-top: 67%;
     overflow: hidden;
-    border-radius: 5px;
+    border-radius: 3px;
   }
   
   .fade-img {
@@ -75,7 +75,7 @@
     max-height: 100%;
     object-fit: cover;
     transition: all 0.2s linear;
-    border-radius: 5px;
+    border-radius: 3px;
   }
   
   .card-img:hover {
@@ -105,6 +105,7 @@
   .card-text {
     color: var(--sand);
     font-size: 14px;
+    font-family: 'satoshi-regular', Arial, Helvetica, sans-serif;
   }
 
   .design-container {
